tests/fixtures/negative/style/ForbiddenMethodCall.kt
package style

import org.slf4j.LoggerFactory

fun example() {
    val logger = LoggerFactory.getLogger("Example")
    logger.info("hello world")
    logger.debug("debug info")
}
